setup PostGIS database

--- a/docker/dockerfiles/backend/Dockerfile
+++ b/docker/dockerfiles/backend/Dockerfile
@@ -10,15 +10,16 @@ ENV PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=off  \
     POETRY_VIRTUALENVS_CREATE=false
 
-RUN apt-get update && apt-get install -y \
-    --no-install-recommends build-essential gcc python3-dev \
-    postgresql-3, postgresql-3-postgis-3, postgresql-server-dev-3, and python3-psycopg3 \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential gcc python3-dev \
+    postgresql-client libpq-dev \
+    postgresql-13-postgis-3 \
+    postgresql-13-postgis-3-scripts \
     && rm -rf /var/lib/apt/lists/*
 RUN pip install --upgrade pip
 RUN pip install poetry
 
-COPY pyproject.toml poetry.lock /backend/
-COPY backend/ .
+COPY . ./backend/
 
 RUN poetry install --no-interaction --no-ansi
 RUN ./entrypoints/setup-postgis.sh
@@ -31,8 +32,6 @@ FROM python:3.10-slim-bullseye
 
 WORKDIR /backend
 COPY --from=build-stage /backend /backend
-
-EXPOSE 8000
 
 ENTRYPOINT ["poetry", "run", "python", "manage.py" , "runserver", "0.0.0.0:8000"]
 
