--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
   backend:
     container_name: proximity_web_backend
     build:
-      context: docker/
-      dockerfile: dockerfiles/backend/Dockerfile
+      context: .
+      dockerfile: docker/dockerfiles/backend/Dockerfile
   db:
     container_name: proximity_search_db
     image: postgres:13-alpine
